--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
   <div class="game-container">
-    <canvas id="gameCanvas"></canvas>
+    <canvas id="gameCanvas"> </canvas>
+    <div class="score"><p>0</p></div>
+    <div class="gameOver">
+      <p>Game over! Click to restart...</p>
+    </div>
   </div>
   <script type="module" src="./src/main.ts"></script>
 </body>
